[package]
name = "vsmtp-plugin-ldap"
version.workspace = true
authors.workspace = true
categories = ["email", "database", "plugin"]
documentation = "https://docs.rs/crate/vsmtp-plugin-ldap/"
edition.workspace = true
homepage = "https://github.com/viridIT/vsmtp-plugin-ldap"
keywords = ["vsmtp", "ldap"]
readme = "README.md"
repository = "https://github.com/viridIT/vsmtp-plugin-ldap"
rust-version.workspace = true
description = "A plugin for vSMTP that enable support for ldap databases"
license = "Elastic-2.0"
license-file.workspace = true

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
humantime-serde = { workspace = true }
ldap3 = { workspace = true }
r2d2 = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }

[dependencies]
humantime-serde = { workspace = true }
ldap3 = { workspace = true }
r2d2 = { workspace = true }
rhai = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
