[package]
name = "vsmtp-plugin-memcached"
version.workspace = true
authors.workspace = true
categories = ["email", "database", "plugin"]
documentation = "https://docs.rs/crate/vsmtp-plugin-memcached/"
edition.workspace = true
homepage = "https://github.com/viridIT/vSMTP"
keywords = ["vsmtp", "memcached"]
publish.workspace = true
readme = "../../../README.md"
repository = "https://github.com/viridIT/vSMTP"
rust-version.workspace = true
description = "A plugin for vSMTP that enable support for memcached databases"

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[lib]
# You could also use Rust's unstable ABI with "dylib".
crate-type = ["cdylib"]

[dependencies]
humantime-serde = { workspace = true }
memcache = { workspace = true }
r2d2 = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
humantime-serde = { workspace = true }
memcache = { workspace = true }
r2d2 = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
serde = { workspace = true }
