[package]
name = "vsmtp-plugin-mongodb"
version.workspace = true
authors.workspace = true
categories = ["email", "database", "plugin"]
documentation = "https://docs.rs/crate/vsmtp-plugin-mongodb/"
edition.workspace = true
homepage = "https://github.com/viridIT/vSMTP"
keywords = ["vsmtp", "mongodb"]
license = "Elastic-2.0"
publish.workspace = true
readme = "../../../README.md"
repository = "https://github.com/viridIT/vSMTP"
rust-version.workspace = true
description = "A plugin for vSMTP that enable support for mongodb databases"

[lints]
workspace = true

[lib]
# You could also use Rust's unstable ABI with "dylib".
crate-type = ["cdylib"]

[build-dependencies]
mongodb = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
serde = { workspace = true }

[dependencies]
mongodb = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
