[package]
name = "vsmtp-plugin-redis"
version.workspace = true
authors.workspace = true
categories = ["email", "database", "plugin"]
documentation = "https://docs.rs/crate/vsmtp-plugin-redis/"
edition.workspace = true
homepage = "https://github.com/viridIT/vsmtp-plugin-redis"
keywords = ["vsmtp", "redis"]
license = "GPL-3.0-only"
publish.workspace = true
readme = "README.md"
repository = "https://github.com/viridIT/vsmtp-plugin-redis"
rust-version.workspace = true
description = "A plugin for vSMTP that enable support for redis databases"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
humantime-serde = { workspace = true }
r2d2 = { workspace = true }
redis = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dependencies]
humantime-serde = { workspace = true }
r2d2 = { workspace = true }
redis = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }