[package]
name = "vsmtp-plugin-sqlite"
version.workspace = true
authors.workspace = true
categories = ["email", "database", "plugin"]
documentation = "https://docs.rs/crate/vsmtp-plugin-sqlite/"
edition.workspace = true
homepage = "https://github.com/viridIT/vsmtp-plugin-sqlite"
keywords = ["vsmtp", "sqlite"]
license = "Elastic-2.0"
publish.workspace = true
readme = "README.md"
repository = "https://github.com/viridIT/vsmtp-plugin-sqlite"
rust-version.workspace = true
description = "A plugin for vSMTP that enable support for sqlite databases"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
humantime-serde = { workspace = true }
r2d2 = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }

[dependencies]
humantime-serde = { workspace = true }
r2d2 = { workspace = true }
rhai = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
