[package]
edition = "2021"

name = "vsmtp-common"
version = "2.2.1"
license = "GPL-3.0-only"

rust-version = "1.66.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-common/"

readme = "../../../README.md"
keywords = ["vsmtp", "smtp", "mail"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "auth\\]\nversion = .*", replace = "auth]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "mail-parser\\]\nversion = .*", replace = "mail-parser]\nversion = \"={{version}}\"" },
]

[features]
default = []
testing = []

[dependencies.vsmtp-auth]
version = "=2.2.1"
path = "../vsmtp-auth"

[dependencies.vsmtp-mail-parser]
version = "=2.2.1"
path = "../vsmtp-mail-parser"

[dependencies]
async-trait = { version = "0.1.73", default-features = false }

anyhow = { version = "1.0.72", default-features = false, features = ["std"] }
addr = { version = "0.15.6", default-features = false, features = ["std"] }

strum = { version = "0.25.0", default-features = false, features = ["std", "derive"] }
time = { version = "0.3.23", default-features = false, features = ["std", "formatting", "macros", "serde-well-known"] }
libc = { version = "0.2.147", default-features = false, features = ["std"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes", "release_max_level_info"] }

lettre = { version = "0.10.4", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
    "serde",
] }
tokio = { version = "1.32.0", default-features = false, features = ["macros", "sync", "fs", "libc", "mio"] }
rustls = { version = "0.21.6", default-features = false, features = ["tls12", "logging"] }
rustls-pemfile = { version = "1.0.3", default-features = false }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
    "dns-over-rustls",
    "dnssec-ring",
    "tokio-runtime",
] }

serde = { version = "1.0.181", default-features = false, features = ["std", "derive"] }
erased-serde = { version = "0.3.28", default-features = false, features = ["std"] }
serde_json = { version = "1.0.104", default-features = false, features = ["std"] }
serde_with = { version = "3.3.0", default-features = false, features = ["std", "macros", "base64"] }

thiserror = { version = "1.0.44", default-features = false }

base64 = { version = "0.21.2", default-features = false, features = ["std"] }
rsasl = { version = "=2.0.0", default-features = false, features = [
    "provider",
    "config_builder",
    # "scram-sha-1",
    # "scram-sha-2",
    "anonymous",
    # "external",
    # "xoauth2",
    "plain",
    "login",
] }

uuid = { version = "1.4.1", default-features = false, features = ["std", "v4", "fast-rng", "serde"] }
function_name = { version = "0.3.0", default-features = false }

[dev-dependencies]
users = { version = "0.11.0", default-features = false }
pretty_assertions = "1.4.0"
rstest = "0.18.2"
